@@ -1,3 +1,4 @@
+- reorder steps according to specs
 - restore progress bar when formatting ext3
 - fix range max value >2TB when creating a partition (useful for LVs >2TB)
 
